<resources>
    <string name="app_name">VisitingCardApp</string>
    <string name="maharaja_institute_of_technology_mysore">Maharaja Institute of technology mysore</string>
    <string name="logo">logo</string>
    <string name="darshan_r">Darshan R</string>
    <string name="student">Student</string>
    <string name="_91_90363_310656">+91 90363 310656</string>
    <string name="_109_brindavan_extension_mysore">#109, Brindavan Extension, Mysore</string>
    <string name="darshan_raj046_gmail_com">darshan_raj046@gmail.com</string>
    <string name="darshanraj_046_gmail_com">darshanraj_046_gmail_com</string>
    <string name="_4mh19cs012gmail_com">4mh19cs012gmail.com</string>
    <string name="chaithra_p">Chaithra P</string>
    <string name="_91_80123_34567">+91 80123 34567</string>
    <string name="_342_krishna_nagar_mysore">#342, Krishna Nagar, Mysore</string>
    <string name="_4mh19is019gmail_com">4mh19is019gmail.com</string>
    <string name="darshanraj046_gmail_com">darshanraj046@gmail.com</string>
</resources>